--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
-    <h1><strong>Welcome!</strong></h1>
-    <!--<p>This example is about links and <a href='images.html'>images</a>.</p>-->
-    <p>Hi everyone, my name is Gavin Bolin. Im a student in CS 260 leanring how to web program</p>
-    <hr/>
-    <h2>Projects:</h2>
-    <ol>
-      <li>Sudoku game in C</li>
-      <li>Skeet game in C++</li>
-      <li>Asteroids game in C++</li>
-    </ol>
-    <h2>Experience:</h2>
-    <ul>
-      <li>PC technician at GMCL</li>
-      <li>CS124 at BYUI</li>
-      <li>CS165 at BYUI</li>
-    </ul>
-    <h2>Contact Info:</h2>
-    <ul>
-      <li>git: gavinbolin</li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/gavin-bolin-88796910a/">Gavin Bolin</a></li>
-    </ul>
+    <div class='page'>
+      <h1><strong>BolinBYU.com</strong></h1>
+      <!--<p>This example is about links and <a href='images.html'>images</a>.</p>-->
+      <p>Welcome to BolinBYU.com. Get ready for a straight slammin' expereince..</p>
+      <hr/>
+      <h2>Projects:</h2>
+      <ol>
+        <li>Sudoku game in C</li>
+        <li>Skeet game in C++</li>
+        <li>Asteroids game in C++</li>
+      </ol>
+      <h2>Experience:</h2>
+      <ul>
+        <li>PC technician at GMCL</li>
+        <li>CS124 at BYUI</li>
+        <li>CS165 at BYUI</li>
+      </ul>
+      <h2>Contact Info:</h2>
+      <ul>
+        <li>git: gavinbolin</li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/gavin-bolin-88796910a/">Gavin Bolin</a></li>
+      </ul>
+      <a class='button' href='nowhere.html'>Button to somewhere?</a>
+      <a id='button-2' class='button' href='nowhere.html'>Button to nowhere!</a>
+    </div>
   </body>
 </html>
