--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <div class='page'>
+      <ul class='hotbar'>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li style="float:right"><a class="active" href="#about">About</a></li>
+      </ul>
       <h1><strong>BolinBYU.com</strong></h1>
       <!--<p>This example is about links and <a href='images.html'>images</a>.</p>-->
       <p>Welcome to BolinBYU.com. Get ready for a straight slammin' expereince..</p>
@@ -18,16 +24,16 @@
         <li>Asteroids game in C++</li>
       </ol>
       <h2>Experience:</h2>
-      <ul>
+      <ol>
         <li>PC technician at GMCL</li>
         <li>CS124 at BYUI</li>
         <li>CS165 at BYUI</li>
-      </ul>
+      </ol>
       <h2>Contact Info:</h2>
-      <ul>
+      <ol>
         <li>git: gavinbolin</li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/gavin-bolin-88796910a/">Gavin Bolin</a></li>
-      </ul>
+      </ol>
       <a class='button' href='nowhere.html'>Button to somewhere?</a>
       <a id='button-2' class='button' href='nowhere.html'>Button to nowhere!</a>
     </div>
