--- a/BolinBYU/about.html
+++ b/BolinBYU/about.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
+  <title>About</title>
   <meta charset='UTF-8' />
-  <title>Responsive Design</title>
   <link rel='stylesheet' href='styles.css' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class='page'>
-    <ul class='hotbar'>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#news">Photography</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li style="float:right"><a class="active" href='about.html'>About</a></li>
-    </ul>
+  <div class="page">
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="portfolio.html">Photos</a>
+        <a class="nav-link" href="reviews.html">Reviews</a>
+        <a class="nav-link active" href="about.html">About <span class="sr-only">(current)</span></a>
+      </div>
+    </div>
+  </nav>
+  <div class="section header">
     <h1><strong>BolinBYU.com</strong></h1>
-    <h2>Projects:</h2>
-    <ol>
-      <li>Sudoku game in C</li>
-      <li>Skeet game in C++</li>
-      <li>Asteroids game in C++</li>
-    </ol>
-    <h2>Experience:</h2>
-    <ol>
-      <li>PC technician at GMCL</li>
-      <li>CS124 at BYUI</li>
-      <li>CS165 at BYUI</li>
-    </ol>
-    <h2>Contact Info:</h2>
-    <ol>
-      <li>git: gavinbolin</li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/gavin-bolin-88796910a/">Gavin Bolin</a></li>
-    </ol>
-    <<div class="picture-me">
-      <img src="images/me.jpg" width='50%' alt="Gavin Bolin at oni museum.">
-      <p>Picture of me in Japan in front of a giant demon statue.</p>
-    </div>>
   </div>
+
+  <div class="column">
+    <img src="./images/me.jpg">
+  </div>
+  <div class="section body">
+  <div class="section feature-1">
+    <p>My name is Gavin Bolin, I am a student at Brigham Young University studying Computer Science.</p>
+  </div>
+  <div class="section feature-1">
+    <p>I served a two year mission for the Church of Jesus Christ of Later Day Saints in Kobe, Japan.</p>
+  </div>
+  <div class="section feature-1">
+    <p>I love photography and have posted a couple pictures that I took in my time in Japan. Enjoy</p>
+  </div>
+</div>
+
+  <div class="section feature-footer">
+    <p>GitHub Repository: <a href="https://github.com/gavinbolin/Photography.git">here</a></p>
+  </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
