--- a/BolinBYU/index.html
+++ b/BolinBYU/index.html
@@ -2,46 +2,42 @@
 <html lang='en'>
 
 <head>
-  <meta charset='UTF-8' />
   <title>Index</title>
+  <meta charset='UTF-8' />
   <link rel='stylesheet' href='styles.css' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
   <div class='page'>
-    <div class='hotbar'>
-      <a href="index.html">Home</a>
-      <a href="#photo">Photography</a>
-      <a href="#contact">Contact</a>
-      <a style="float:right" class="active" href='about.html'>About</a></li>
-    </div>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="portfolio.html">Photos</a>
+          <a class="nav-link" href="reviews.html">Reviews</a>
+          <a class="nav-link" href="about.html">About</a>
+        </div>
+      </div>
+    </nav>
     <div class="section header">
       <h1><strong>BolinBYU.com</strong></h1>
     </div>
-    <div class="section comment">
-      <p>Welcome to BolinBYU.com. YEE freakin' HAW..</p>
-      <hr>
+    <div class="section body">
+      <div class="section feature-1">
+        <p>Welcome to BolinBYU.com, this is a website where I showcase some of the photos Ive taken.</p>
+      </div>
     </div>
-    <div class="section feature-1">
-      
+    <div class="section feature-footer">
+      <p>GitHub Repository: <a href="https://github.com/gavinbolin/Photography.git">here</a></p>
     </div>
-    <div class="section feature-2">
-
-    </div>
-    <div class="section feature-3">
-
-    </div>
-    <div class="section feature-4">
-
-    </div>
-
-    <!--<p>This example is about links and <a href='images.html'>images</a>.</p>-->
-    <hr/>
-
-    <!--<a class='button' href='nowhere.html'>Button to somewhere?</a>
-      <a id='button-2' class='button' href='nowhere.html'>Button to nowhere!</a> -->
   </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-
 </html>
