--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang='en'>
 
 <head>
@@ -17,8 +16,8 @@
     </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="portfolio.html">Photos</a>
+          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" href="portfolio.html">Photos <span class="sr-only">(current)</span></a>
           <a class="nav-link" href="reviews.html">Reviews</a>
           <a class="nav-link" href="about.html">About</a>
         </div>
@@ -27,11 +26,30 @@
     <div class="section header">
       <h1><strong>BolinBYU.com</strong></h1>
     </div>
-    <div class="section body">
-      <div class="section feature-1">
-        <p>Welcome to BolinBYU.com, this is a website where I showcase some of the photos Ive taken.</p>
+      <div class="row">
+        <div class="column">
+          <img src="./images/lantern.jpg">
+          <img src="./images/gate.jpg">
+          <img src="./images/waterfall.jpg">
+        </div>
+        <div class="column">
+          <img src ="./images/forest.jpg">
+          <img src ="./images/cliff.jpg">
+          <img src ="./images/kinkakuji.jpg">
+        </div>
+        <div class="column">
+          <img src="./images/winter-gate.jpg">
+          <img src="./images/sakura.jpg">
+          <img src="./images/sunrise.jpg">
+        </div>
+        <div class="column">
+          <img src="./images/temple.jpg">
+          <img src="./images/fukuchiyama.jpg">
+          <img src="./images/himeji.jpg">
+        </div>
       </div>
-    </div>
+
+
     <div class="section feature-footer">
       <p>GitHub Repository: <a href="https://github.com/gavinbolin/Photography.git">here</a></p>
     </div>
