--- a/reviews.html
+++ b/reviews.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang='en'>
 
 <head>
@@ -17,9 +16,9 @@
     </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home</a>
           <a class="nav-link" href="portfolio.html">Photos</a>
-          <a class="nav-link" href="reviews.html">Reviews</a>
+          <a class="nav-link active" href="reviews.html">Reviews <span class="sr-only">(current)</span></a>
           <a class="nav-link" href="about.html">About</a>
         </div>
       </div>
@@ -29,9 +28,16 @@
     </div>
     <div class="section body">
       <div class="section feature-1">
-        <p>Welcome to BolinBYU.com, this is a website where I showcase some of the photos Ive taken.</p>
+        <p>@Someone:    wowee wow wow</p>
+      </div>
+      <div class="section feature-1">
+        <p>@Someone:    Would ya look at that</p>
+      </div>
+      <div class="section feature-1">
+        <p>@Someone:    could have been better...</p>
       </div>
     </div>
+
     <div class="section feature-footer">
       <p>GitHub Repository: <a href="https://github.com/gavinbolin/Photography.git">here</a></p>
     </div>
